# denv

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Justfile  Makefile  README.md  bench-noop.sh
.github/workflows/: build.yml
proptest-regressions/: main.txt
src/: main.rs  stdlib.sh
tests/: integration.rs
