[package]
name = "denv"
version = "0.1.5"
edition = "2024"

[dependencies]
# none

[dev-dependencies]
proptest = "1"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
